<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="#FAFAFA"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangular_blue_border_white"
        android:padding="5dp">

        <TextView
            android:id="@+id/exit_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/confirm_string"
            android:textAlignment="textStart"
            android:textColor="#072C50"
            android:textSize="@dimen/font_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exit_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/exit_tittle_string"
            android:textAlignment="textStart"
            android:textColor="#072C50"
            android:textSize="@dimen/font_big"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit_tittle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_cnl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rectangular_blue_border_white"
            android:padding="5dp"
            android:text="@string/cancel_string"
            android:textAlignment="center"
            android:textColor="@color/app_red1"
            android:textSize="@dimen/font_xxxl"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/exit_ok"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/exit_details" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rectangular_red"
            android:padding="5dp"
            android:text="@string/ok_string"
            android:textAlignment="center"
            android:textColor="@color/app_white1"
            android:textSize="@dimen/font_xxxl"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/exit_cnl"
            app:layout_constraintTop_toBottomOf="@+id/exit_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>