<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.BlogDetailsPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/blogdetails_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_default" />

            <TextView
                android:id="@+id/blogdetails_tittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/blogdetails_subtittle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/app_dark"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/app_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/category_string"
                android:textAlignment="textStart"
                android:textColor="@color/app_hint"
                android:textSize="@dimen/font_xl"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blogdetails_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rectangular_blue_border_white"
                android:padding="5dp"
                android:text="@string/category_string"
                android:textAlignment="textStart"
                android:textColor="@color/app_dark"
                android:textSize="@dimen/font_xxl"
                android:textStyle="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/app_hint" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/author1_string"
                android:textAlignment="textStart"
                android:textColor="@color/app_hint"
                android:textSize="@dimen/font_xl"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blogdetails_authorname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textColor="@color/app_hint"
                android:textSize="@dimen/font_xxxl"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/blogdetails_authorpro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textColor="@color/app_hint"
                android:textSize="@dimen/font_xxl"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/blogdetails_authorimage"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_default" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_drop_shadow" />

            <Button
                android:id="@+id/blogdetails_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/rectangular_red"
                android:padding="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/edit_string"
                android:textAlignment="center"
                android:textColor="@color/app_white1"
                android:textSize="@dimen/font_xxl"
                app:backgroundTint="@null" />
        </LinearLayout>
    </ScrollView>
</layout>